--- a/src/components/inventory/inventoryApp.css
+++ b/src/components/inventory/inventoryApp.css
@@ -1,6 +1,13 @@
+.inventory {
+    display: flex;
+    flex-direction: column;
+}
+
 #inventory-top {
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    flex-direction: row-reverse;
+    align-items: flex-start;
 }
 
 .current-category-label {
